0607 수정 및 파일정리

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -38,7 +38,7 @@
 
 .plax.ccparallax-one {
   height: 700px;
-  background-image: url("/assets/slush.jpg");
+  background-image: url("/assets/slush_asia/slush_background.jpg");
 }
 .plax.ccparallax-two {
   height: 700px;
