--- a/app/views/videos/infomap.html.erb
+++ b/app/views/videos/infomap.html.erb
@@ -72,26 +72,26 @@
       <!-- Trigger the modal with a button -->
       <!-- <a href="http://localhost:3000/videos/18_slush5"> -->
       <!-- <a href="/videos/14_slush_1" target="_self"> -->
-        <!-- <img src="assets/slush2016map_info.png" id="slushmaps" class="img-responsive" data-toggle="modal" data-target="#myModal" alt=""> -->
+        <!-- <img src="assets/slush_asia/slush2016map_info.png" id="slushmaps" class="img-responsive" data-toggle="modal" data-target="#myModal" alt=""> -->
       <!-- </a> -->
 
           <!-- Slider Frame -->
           <div id="sliderFrame">
               <div id="slider">
                   <a href="#">
-                    <img class="img-responsive" src="assets/slush2016map_info.png" data-toggle="modal" data-target="#myModal" alt="">
+                    <img class="img-responsive" src="assets/slush_asia/slush2016map_info.png" data-toggle="modal" data-target="#myModal" alt="">
                   </a>
                   <a href="#">
-                    <img class="img-responsive" src="assets/slush2016map_info2.png" data-toggle="modal" data-target="#myModal2" alt="">
+                    <img class="img-responsive" src="assets/slush_asia/slush2016map_info2.png" data-toggle="modal" data-target="#myModal2" alt="">
                   </a>
                   <a href="#">
-                    <img class="img-responsive" src="assets/slush2016map_info3.png" data-toggle="modal" data-target="#myModal3" alt="">
+                    <img class="img-responsive" src="assets/slush_asia/slush2016map_info3.png" data-toggle="modal" data-target="#myModal3" alt="">
                   </a>
                   <a href="#">
-                    <img class="img-responsive" src="assets/slush2016map_info4.png" data-toggle="modal" data-target="#myModal4" alt="">
+                    <img class="img-responsive" src="assets/slush_asia/slush2016map_info5.png" data-toggle="modal" data-target="#myModal4" alt="">
                   </a>
                   <a href="#">
-                    <img class="img-responsive" src="assets/slush2016map_info5.png" data-toggle="modal" data-target="#myModal5" alt="">
+                    <img class="img-responsive" src="assets/slush_asia/slush2016map_info4.png" data-toggle="modal" data-target="#myModal5" alt="">
                   </a>
               </div>
         <!-- <div style="display: none;">
@@ -105,11 +105,11 @@
 
         <!--thumbnails-->
         <div id="thumbs">
-            <div class="thumb"><img src="assets/thumb_info.png" class="img-responsive" alt="" /></div>
-            <div class="thumb"><img src="assets/thumb_info2.png" class="img-responsive" alt="" /></div>
-            <div class="thumb"><img src="assets/thumb_info3.png" class="img-responsive" alt="" /></div>
-            <div class="thumb"><img src="assets/thumb_info4.png" class="img-responsive" alt="" /></div>
-            <div class="thumb"><img src="assets/thumb_info5.png" class="img-responsive" alt="" /></div>
+            <div class="thumb"><img src="assets/slush_asia/thumb_info.png" class="img-responsive" alt="" /></div>
+            <div class="thumb"><img src="assets/slush_asia/thumb_info2.png" class="img-responsive" alt="" /></div>
+            <div class="thumb"><img src="assets/slush_asia/thumb_info3.png" class="img-responsive" alt="" /></div>
+            <div class="thumb"><img src="assets/slush_asia/thumb_info5.png" class="img-responsive" alt="" /></div>
+            <div class="thumb"><img src="assets/slush_asia/thumb_info4.png" class="img-responsive" alt="" /></div>
         </div>
     </div>
 
@@ -198,7 +198,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Keynote Stage - Honda</h4>
+                  <h4 class="modal-title" id="myModalLabel">Neon Block</h4>
             </div>
             <div class="modal-body">
                 <iframe id="modalVideo4" width="560" height="315" src="https://www.youtube.com/embed/xx-N3abzFvA?autoplay=1" frameborder="0" allowfullscreen></iframe>
@@ -222,7 +222,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Neon Block</h4>
+                  <h4 class="modal-title" id="myModalLabel">Keynote Stage - Honda</h4>
             </div>
             <div class="modal-body">
                 <iframe id="modalVideo5" width="560" height="315" src="https://www.youtube.com/embed/paO5EcxQSPg?autoplay=1" frameborder="0" allowfullscreen></iframe>
