0607 layout.scss 등 일부 수정

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,7 +37,7 @@
           <div class="row travel_search" data-travels="<%= @travels.to_json %>">
             <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
               <div class="input-group">
-                <input type="text" class="form-control typeahead" placeholder="Midnight in Paris" >
+                <input type="text" class="form-control typeahead" placeholder="Search In Treview">
                 <span class="input-group-btn">
                   <button class="btn btn-danger search" type="button">Go</button>
                 </span>
