--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -90,6 +90,7 @@
   margin-top: 160px;
   padding: 30px 0 80px 0;
     background-color:rgba(0, 0, 0, 0.5);
+    border-radius: 12px;
 }
 
 .btn:hover {
