--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,17 +1,16 @@
-<header class='navbar navbar-inverse navbar-fixed-top header'>
-<!-- <header class='navbar navbar-default navbar-fixed-top header'> -->
+<header class="navbar navbar-inverse navbar-fixed-top header">
+<!-- <header class="navbar navbar-default navbar-fixed-top header"> -->
 
-  <!-- <div class='container'>  -->
-  <div class='container-fluid'>
-    <div class='navbar-header'>
- 
+  <!-- <div class="container">  -->
+  <div class="container-fluid">
+    <div class="navbar-header">
 
       <% if params[:for].present? %>
-        <a class="navbar-brand" href="/"><i class='glyphicon glyphicon-home'></i></a>
+        <a class="navbar-brand" href="/"><i class="glyphicon glyphicon-home"></i></a>
         <a class="navbar-brand" href="#">Treview for <%= params[:for].gsub("-", " ") %></a>
       <% elsif params[:controller] == 'users' && params[:action] == 'show' %>
-        <a class="navbar-brand" href="/"><i class='glyphicon glyphicon-home'></i></a>
-        <a class="navbar-brand" href='#'><%= @user.name %>'s Treview</a>
+        <a class="navbar-brand" href="/"><i class="glyphicon glyphicon-home"></i></a>
+        <a class="navbar-brand" href="#"><%= @user.name %>'s Treview</a>
       <% else %>
         <a class="navbar-brand" href="/">Treview</a>
       <% end %>
@@ -24,19 +23,18 @@
       </button>
     </div>
 
-    <ul class='nav navbar-nav navbar-right collapse navbar-collapse'>
+    <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
       <% if current_user %>
-        <li class='text-right'><%= link_to "My Videos", "/users/#{current_user.id_with_name}" %></li>
-        <li class='text-right'><a href='/logout'>Sign out</a></li>
+        <li class="text-right"><%= link_to "My Videos", "/users/#{current_user.id_with_name}" %></li>
+        <li class="text-right"><a href="/logout">Sign Out</a></li>
         <% if current_user.admin? %>
-          <li class='text-right'><%= link_to "Admin", "/admin/travels" %><li>
+          <li class="text-right"><%= link_to "Admin", "/admin/travels" %><li>
         <% end %>
       <% else %>
-        <li class='text-right'><a href='/auth/facebook'>Sign in with Facebook</a></li>
-        <!-- <li class='text-right'><a href='/auth/twitter'>Twitter</a></li> -->
+        <li class="text-right"><a href="/auth/facebook">Sign In with Facebook</a></li>
+        <!-- <li class="text-right"><a href="/auth/twitter">Twitter</a></li> -->
       <% end %>
     </ul>
 
   </div>
 </header>
-
