0607 index에 javascript 효과 추가

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,3 +61,27 @@
         </div>
       </div>
     </div>
+
+
+
+  <!-- 타이틀 박스 페이드 토글 -->
+  <!-- coffee script에서 지원하지 않으므로 이 페이지에 javascript로 작성 -->
+
+  <script>
+  $(window).on("load",function() {
+  $(window).scroll(function() {
+    $(".week_title").each(function() {
+      /* Check the location of each desired element */
+      var objectBottom = $(this).offset().top + $(this).outerHeight();
+      var windowBottom = $(window).scrollTop() + $(window).innerHeight();
+
+      /* If the element is completely within bounds of the window, fade it in */
+      if (objectBottom < windowBottom) { //object comes into view (scrolling down)
+        if ($(this).css("opacity")==0) {$(this).fadeTo(500,1);}
+      } else { //object goes out of view (scrolling up)
+        if ($(this).css("opacity")==1) {$(this).fadeTo(500,0);}
+      }
+    });
+  }); $(window).scroll(); //invoke scroll-handler on page-load
+});
+  </script>
