--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -86,15 +86,43 @@
   color:#000;
 }
 
+
 .week_title {
+  font-family: Helvetica;
   margin-top: 160px;
-  padding: 30px 0 80px 0;
+  padding: 30px 0;
     background-color:rgba(0, 0, 0, 0.5);
     border-radius: 12px;
   opacity: 1;
 }
 
-.btn:hover {
-  transition: all 1s;
+a {
+  color: inherit;
+  text-decoration: none;
 }
+
+.week-div {
+  text-align: center;
+}
+
+.week-btn {
+  display: inline-block;
+    color: #fff;
+    height: 2.5em;
+    line-height: 2.5em;
+    margin: 10px 0 0 0;
+    padding: 0 1.5em;
+    box-shadow: inset 0 0 0 0.15em #fff;
+    font-size: 1.5em;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background-color 0.2s ease, color 0.2s ease;
+  &:hover {
+    text-decoration: none;
+      color: #d9534f;
+      background-color: #fff;
+  }
+}
+
+
 
