--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,8 +40,8 @@
       <div class="container">
         <div class="week_title">
           <h1><small>Last week : </small>Slush in Tokyo</h1>
-          <div class="col-md-offset-4 col-md-4 col-md-offset-4">
-            <a class="btn btn-danger btn-lg btn-block" role="button" href="/infomap">
+          <div class="week-div">
+            <a class="week-btn" href="/infomap">
               Let's See! <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </a>
           </div>
@@ -53,8 +53,8 @@
       <div class="container">
         <div class="week_title">
           <h1><small>This week : </small>U300 in Seoul</h1>
-          <div class="col-md-offset-4 col-md-4 col-md-offset-4">
-            <a class="btn btn-danger btn-lg btn-block" role="button" href="/infomap2">
+          <div class="week-div">
+            <a class="week-btn" href="/infomap2">
               Let's See! <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </a>
           </div>
