--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -110,6 +110,7 @@
     font-size: 1.5em;
     font-weight: 500;
     cursor: pointer;
+    border-radius: 6px;
     transition: background-color 0.2s ease, color 0.2s ease;
   &:hover {
     text-decoration: none;
