--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,7 +7,7 @@
 }
 
 .crt-parallaxvideo{
-  height: 700px;
+  height: 713px;
   padding-bottom: 50px;
   padding-top: 50px;
 
@@ -37,12 +37,13 @@
 }
 
 .plax.ccparallax-one {
-  height: 700px;
+  height: 727px;
   background-image: url("/assets/slush_asia/slush_background.jpg");
 }
 .plax.ccparallax-two {
-  height: 700px;
+  height: 727px;
   background-image: url("/assets/u300/u300_index.jpg");
+  // background-image: url("/assets/u300/u300in.jpg");
 }
 
 .plax:last-child {
@@ -100,20 +101,23 @@
 }
 
 .week-btn {
-  display: inline-block;
-    color: #fff;
-    height: 2.5em;
-    line-height: 2.5em;
-    margin: 10px 0 0 0;
-    padding: 0 1.5em;
-    box-shadow: inset 0 0 0 0.15em #fff;
-    font-size: 1.5em;
-    font-weight: 500;
-    cursor: pointer;
-    border-radius: 6px;
-    transition: background-color 0.2s ease, color 0.2s ease;
-  &:hover {
-    text-decoration: none;
+  &:link, &:visited {
+    text-decoration: none !important;
+    display: inline-block;
+      color: #fff;
+      height: 2.5em;
+      line-height: 2.5em;
+      margin: 10px 0 0 0;
+      padding: 0 1.5em;
+      box-shadow: inset 0 0 0 0.15em #fff;
+      font-size: 1.5em;
+      font-weight: 500;
+      cursor: pointer;
+      border-radius: 6px;
+      transition: background-color 0.2s ease, color 0.2s ease;
+  }
+  &:hover, &:active {
+    text-decoration: none !important;
       color: #d9534f;
       background-color: #fff;
   }
